kubernetes/main/apps/default/nas/vault/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bw
  namespace: default
spec:
  clusterIP: None
  ports:
    - port: 9998
      targetPort: 9998
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: bw
  namespace: default
  labels:
    kubernetes.io/service-name: bw
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.1.3"
    conditions:
      ready: true
      serving: true
      terminating: false
ports:
  - name: https
    port: 9998
    protocol: TCP
